log/build_2022-08-21_04-33-53/flody_test_suite/stderr.log
  File "/home/daeho/practice_ws/install/flody_test_suite/lib/python3.10/site-packages/flody_test_suite/flody_test_suite_node.py", line 79
    if FlodyTestSuite.arrive_pose.theta = self.pose.theta : 
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

